@@ -77,6 +77,7 @@ Verilator 5.037 devel
 * Fix DFG binToOneHot table index missing driver (#6100). [Geza Lore]
 * Fix decoding octal string escapes with 1-2 digits (#6108).
 * Fix colon-divide operator without space (#6121). [Alex Solomatnikov]
+* Fix `pre_randomize`/`post_randomize` when no randomize (#6122). [Alex Solomatnikov]
 * Fix variables declared in fork after taskify (#6126). [Kamil Rakoczy, Antmicro Ltd.]
 * Fix method calls without parenthesis (#6127). [Alex Solomatnikov]
 
